--- a/test.html
+++ b/test.html
@@ -60,9 +60,8 @@ body {
 </div>
 
 <div id="main">
-  <h2>Sidenav Push Example</h2>
-  <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">☰ open</span>
+ 
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">☰</span>
     <div class="logo"> </div>
 	<div class="container klein center">
           
